[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pynote"
version = "0.1.0"
description = "A simple, local-first, and private AI-powered note-taking application"
authors = [{name = "pyNote Contributors"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "markdown>=3.5.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "einops>=0.7.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
